# TaskManagerPy

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.ci.yml  docker-compose.yml  newrelic.ini  pyproject.toml
.github/workflows/: main.yml
task_manager/: settings.py  urls.py
task_manager/main/: admin.py  permissions.py  serializers.py  views.py
task_manager/main/migrations/: 0001_initial.py  0002_tag_user_role_task.py  0003_alter_task_assignee.py  0004_alter_task_author.py  0005_task_tags.py  0006_user_date_of_birth_user_phone.py  0007_alter_user_phone.py  0008_user_avatar_picture.py
task_manager/main/models/: tag.py  task.py  user.py
task_manager/main/services/: single_resource.py
task_manager/main/templates/emails/: base.html  notification.html
task_manager/main/test/: base.py  factories.py  test_admin.py  test_jwt_auth.py  test_send_email.py
task_manager/main/test/factories/: __init__.py  base.py  tag.py  task.py  user.py
task_manager/main/test/factoriess/: __init__.py  base.py  tag.py  task.py  user.py
task_manager/main/test/filters/: test_task_filters.py  test_user_filters.py
task_manager/main/test/services/: test_send_email.py
task_manager/main/test/view_sets/: test_current_user.py  test_tag.py  test_task.py  test_task_tags.py  test_user.py  test_user_tasks.py
